# python-logging-objects-with-schema

./: .gitignore  .pre-commit-config.yaml  .releaserc.cjs  .releaserc.json  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: auto-pr-description.yml  lint_and_test.yaml  publish-stable.yaml  publish.yaml  release-stable.yaml
logging_objects_with_schema/: __init__.py  schema_logger.py
src/logging_objects_with_schema/: __init__.py  errors.py  schema_applier.py  schema_loader.py  schema_logger.py
tests/: conftest.py  helpers.py  test__schema_logger_mimic.py  test_data_validation.py  test_formatter.py  test_formatter_basic.py  test_integration.py  test_logging_compatibility.py  test_mypy_support.py  test_schema_applier.py  test_schema_loader.py  test_schema_logger.py  test_schema_logger_mimic.py  test_thread_safety.py
tests/private/: __init__.py  test_errors.py  test_schema_applier.py  test_schema_loader.py  test_schema_logger.py
