[build-system]
requires = [ "uv_build >= 0.9.11, <0.10.0" ]
build-backend = "uv_build"

[project]
name = "logging-objects-with-schema"
version = "0.3.1rc1"
description = "Proxy logging wrapper that validates extra fields against a JSON schema."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ ]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
keywords = [
  "logging",
  "schema",
  "validation",
  "structured-logging",
  "structured-logs"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Developers",
  "Topic :: System :: Logging",
  "Typing :: Typed"
]

  [[project.authors]]
  name = "Dmitrii Safronov"
  email = "dhameoelin+logging-objects-with-schema@gmail.com"

  [project.optional-dependencies]
  dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "flake8-pyproject>=1.2.3",
  "mypy>=1.18.1",
  "bandit>=1.8.6",
  "pre-commit>=3.5.0",
  "vulture>=2.0.0"
]

  [project.urls]
  Source = "https://github.com/disafronov/python-logging-objects-with-schema"
  Issues = "https://github.com/disafronov/python-logging-objects-with-schema/issues"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.black]
line-length = 88
include = "\\.pyi?$"
extend-exclude = """
/(
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
"""

[tool.flake8]
max-line-length = 88
extend-ignore = [ "E203", "W503" ]
exclude = [ ".venv", "__pycache__", ".git", "htmlcov" ]

[tool.mypy]
exclude = "tests/"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.bandit]
exclude_dirs = [ ".venv", "__pycache__", ".git", "htmlcov", "tests" ]

[tool.coverage.run]
source = [ "src" ]
branch = true

[tool.coverage.report]
exclude_lines = [
  "def __repr__",
  "if self\\.debug",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod"
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.vulture]
min_confidence = 80
exclude = [ "__pycache__" ]
ignore_names = [ "cls" ]
paths = [ "src" ]
