[build-system]
requires = [ "uv_build >= 0.9.11, <0.10.0" ]
build-backend = "uv_build"

[project]
name = "logging-objects-with-schema"
version = "1.0.1"
description = "Proxy logging wrapper that validates extra fields against a JSON schema."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ ]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
keywords = [
  "logging",
  "schema",
  "validation",
  "structured-logging",
  "structured-logs"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Developers",
  "Topic :: System :: Logging",
  "Typing :: Typed"
]

  [[project.authors]]
  name = "Dmitrii Safronov"
  email = "dhameoelin+logging-objects-with-schema@gmail.com"

  [project.urls]
  Source = "https://github.com/disafronov/python-logging-objects-with-schema"
  Issues = "https://github.com/disafronov/python-logging-objects-with-schema/issues"

[dependency-groups]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "flake8-pyproject>=1.2.3",
  "mypy>=1.18.1",
  "bandit>=1.8.6",
  "pre-commit>=3.5.0",
  "vulture>=2.0.0"
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = "\\.pyi?$"

[tool.flake8]
max-line-length = 88
extend-ignore = [ "E203", "W503" ]
exclude = [ ".venv" ]

[tool.mypy]
files = [ "src" ]
strict = true
warn_unused_configs = true
warn_unreachable = true

[tool.coverage.run]
source = [ "src" ]
branch = true

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod"
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.vulture]
min_confidence = 80
ignore_names = [ "cls" ]
paths = [ "src" ]
